Hospital Management System/force-app/main/default/objects/Doctor__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <label>Degree</label>
    <type>Picklist</type>
    <description>
        Academic and professional medical degree held by the doctor.
    </description>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>MBBS</fullName><default>false</default></value>
            <value><fullName>MD</fullName><default>false</default></value>
            <value><fullName>BDS</fullName><default>false</default></value>
            <value><fullName>MS</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>