Hospital Management System/force-app/main/default/objects/Doctor__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
    <description>
        Official email address of the doctor used for communication and notifications.
    </description>
</CustomField>