Hospital Management System/force-app/main/default/objects/Doctor__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <type>Phone</type>
    <description>
        Primary contact number of the doctor.
    </description>
    <required>true</required>
</CustomField>